@@ -16,7 +16,7 @@
 junit.version=3.8.1
 ivy.version=2.1.0
 pig.version=0.8.0
-commons-cli.version=1.0
+commons-cli.version=1.2
 #hadoop-core.version=0.20.2 Waiting for a secure version of hadoop in maven
 hadoop-tools.version=0.20.205.0
 jms.version=1.1
